--- a/projects/ocap/environment.yml
+++ b/projects/ocap/environment.yml
@@ -7,3 +7,5 @@ channels:
 dependencies:
   - python=3.11
   - open-world-agents::gstreamer-bundle
+  - graphite2=1.3.14=he0c23c2_0
+  - gettext=0.21.1=h5728263_0
