add Apex Legends

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,6 +75,9 @@ jobs:
           # Create Minecraft version
           Copy-Item "scripts/release/ocap/run.bat" "scripts/release/ocap/run-Mine.bat"
 
+          # Create Apex Legends version
+          Copy-Item "scripts/release/ocap/run.bat" "scripts/release/ocap/run-Apex.bat"
+
           $oldLine = 'start cmd.exe /k "call .\env\Scripts\activate.bat && title Conda Environment (%ENV_DIR%)"'
 
           # Read the content and replace the line in the Euro version
@@ -106,6 +109,12 @@ jobs:
           $newLineMinecraft = 'start "" cmd.exe /c call .\env\Scripts\activate.bat ^&^& title    ^&^& ocap --window-name "Minecraft" ^& owl mcap sanitize *.mcap --yes --no-backups --max-removal-ratio 1.0 --keep-window "Minecraft"'
           $content = $content -replace [regex]::Escape($oldLine), $newLineMinecraft
           Set-Content "scripts/release/ocap/run-Mine.bat" -Value $content -NoNewline
+
+          # Read the content and replace the line in the Apex Legends version
+          $content = Get-Content "scripts/release/ocap/run-Apex.bat" -Raw
+          $newLineApex = 'start "" cmd.exe /c call .\env\Scripts\activate.bat ^&^& title    ^&^& ocap --window-name "Apex Legends" ^& owl mcap sanitize *.mcap --yes --no-backups --max-removal-ratio 1.0 --keep-window "Apex Legends"'
+          $content = $content -replace [regex]::Escape($oldLine), $newLineApex
+          Set-Content "scripts/release/ocap/run-Apex.bat" -Value $content -NoNewline
 
           Write-Host "Created multiple versions of run.bat"
           Write-Host "Files created:"
@@ -163,4 +172,13 @@ jobs:
           path: |
             scripts/release/ocap/env.tar.gz
             scripts/release/ocap/run-Mine.bat
+            scripts/release/ocap/restore_ocap.py
+
+      - name: Upload Apex Legends Version
+        uses: actions/upload-artifact@v4
+        with:
+          name: ocap-Apex
+          path: |
+            scripts/release/ocap/env.tar.gz
+            scripts/release/ocap/run-Apex.bat
             scripts/release/ocap/restore_ocap.py
