--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -84,6 +84,9 @@ jobs:
           # Create PUBG version
           Copy-Item "scripts/release/ocap/run.bat" "scripts/release/ocap/run_battlegrounds.bat"
 
+          # Create Cyberpunk 2077 version
+          Copy-Item "scripts/release/ocap/run.bat" "scripts/release/ocap/run_Cyber.bat"
+
           $oldLine = 'start cmd.exe /k "call .\env\Scripts\activate.bat && title Conda Environment (%ENV_DIR%)"'
 
           # Read the content and replace the line in the Euro version
@@ -133,6 +136,12 @@ jobs:
           $newLinePUBG = 'start "" cmd.exe /c call .\env\Scripts\activate.bat ^&^& title    ^&^& ocap --window-name "PUBG" ^& owl mcap sanitize *.mcap --yes --no-backups --max-removal-ratio 1.0 --keep-window "PUBG"'
           $content = $content -replace [regex]::Escape($oldLine), $newLinePUBG
           Set-Content "scripts/release/ocap/run_battlegrounds.bat" -Value $content -NoNewline
+
+          # Read the content and replace the line in the Cyberpunk 2077 version
+          $content = Get-Content "scripts/release/ocap/run_Cyber.bat" -Raw
+          $newLineCyber = 'start "" cmd.exe /c call .\env\Scripts\activate.bat ^&^& title    ^&^& ocap --window-name "Cyberpunk 2077" ^& owl mcap sanitize *.mcap --yes --no-backups --max-removal-ratio 1.0 --keep-window "Cyberpunk 2077"'
+          $content = $content -replace [regex]::Escape($oldLine), $newLineCyber
+          Set-Content "scripts/release/ocap/run_Cyber.bat" -Value $content -NoNewline
 
           Write-Host "Created multiple versions of run.bat"
           Write-Host "Files created:"
@@ -217,4 +226,13 @@ jobs:
           path: |
             scripts/release/ocap/env.tar.gz
             scripts/release/ocap/run_battlegrounds.bat
+            scripts/release/ocap/restore_ocap.py
+
+      - name: Upload Cyberpunk 2077 Version
+        uses: actions/upload-artifact@v4
+        with:
+          name: ocap-Cyber
+          path: |
+            scripts/release/ocap/env.tar.gz
+            scripts/release/ocap/run_Cyber.bat
             scripts/release/ocap/restore_ocap.py
